--- a/app/src/main/res/layout/content_driver.xml
+++ b/app/src/main/res/layout/content_driver.xml
@@ -8,4 +8,10 @@
     tools:context=".DriverActivity"
     tools:showIn="@layout/app_bar_driver">
 
+    <ListView
+        android:id="@+id/ride_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
+
 </android.support.constraint.ConstraintLayout>
