--- a/app/src/main/res/layout/location_row_layout.xml
+++ b/app/src/main/res/layout/location_row_layout.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingBottom="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -9,19 +14,43 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/location"
+            android:id="@+id/waiting_at"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="26dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:textSize="16dp"
             android:textStyle="bold|italic" />
 
         <TextView
-            android:id="@+id/dist"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:lines="3"
-            android:textSize="26dp"
-            android:textStyle="bold|italic" />
+            android:layout_weight="1"
+            android:text="Waiting at:"
+            android:textStyle="bold"/>
 
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/ride_length"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:textSize="16dp"
+            android:textStyle="bold|italic" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Ride length:"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
+</LinearLayout>
