--- a/app/src/main/res/layout/fragment_driver_history.xml
+++ b/app/src/main/res/layout/fragment_driver_history.xml
@@ -8,4 +8,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ListView>
+    <TextView
+        android:id="@+id/no_history"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:text="@string/no_history_message"
+        android:textColor="#525252"
+        android:textSize="36dp" />
 </LinearLayout>
