--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -23,5 +23,27 @@
         android:orientation="horizontal"
         android:layout_weight="3">
 
+        <ImageButton
+            android:id="@+id/call"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:autoLink="phone"
+            android:src="@android:drawable/sym_action_call"
+            android:text="Call" />
+
+        <ImageButton
+            android:id="@+id/send_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/sym_action_chat"
+            android:text="SMS" />
+
+
+
+        <Button
+            android:id="@+id/ride_completed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Completed" />
     </LinearLayout>
 </LinearLayout>
