--- a/app/src/main/res/layout/fragment_open_rides.xml
+++ b/app/src/main/res/layout/fragment_open_rides.xml
@@ -42,7 +42,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
         android:orientation="vertical">
@@ -55,42 +55,20 @@
             <TextView
                 android:id="@+id/name_and_destination"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="left" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="top"
             android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/call"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:autoLink="phone"
-                android:src="@android:drawable/sym_action_call"
-                android:text="Call" />
-
-            <ImageButton
-                android:id="@+id/send_message"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@android:drawable/sym_action_chat"
-                android:text="SMS" />
 
             <Button
                 android:id="@+id/choose_ride"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Pickup" />
-
-            <Button
-                android:id="@+id/ride_completed"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Completed" />
         </LinearLayout>
 
 
