--- a/app/src/main/res/layout/fragment_driver_stats.xml
+++ b/app/src/main/res/layout/fragment_driver_stats.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id ="@+id/textViewKm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
