line graph for stats

--- a/app/src/main/res/layout/fragment_driver_stats.xml
+++ b/app/src/main/res/layout/fragment_driver_stats.xml
@@ -11,9 +11,10 @@
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="42dp" />
 
-    <WebView
+    <lecho.lib.hellocharts.view.LineChartView
+        android:id="@+id/chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
