--- a/app/src/main/res/layout/fragment_driver_stats.xml
+++ b/app/src/main/res/layout/fragment_driver_stats.xml
@@ -1,22 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <TextView
         android:id ="@+id/textViewKm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
-        android:layout_height="42dp" />
+        android:layout_height="wrap_content" />
+    android:layout_height="42dp" />
 
     <lecho.lib.hellocharts.view.LineChartView
         android:id="@+id/chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 
 </LinearLayout>
