back button and exit

--- a/app/src/main/res/menu/activity_driver_drawer.xml
+++ b/app/src/main/res/menu/activity_driver_drawer.xml
@@ -19,7 +19,7 @@
         <item
             android:id="@+id/nav_log_out"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Log out" />
+            android:title="Exit" />
     </group>
 
 </menu>
