--- a/app/src/main/res/layout/fragment_driver_history.xml
+++ b/app/src/main/res/layout/fragment_driver_history.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ListView
         android:id="@+id/ride_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ListView>
+        android:layout_height="wrap_content"></ListView>
+
     <TextView
         android:id="@+id/no_history"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
+        android:padding="20dp"
         android:text="@string/no_history_message"
-        android:textColor="#525252"
-        android:textSize="36dp" />
+        android:textAlignment="center"
+        android:textSize="36dp"
+        android:textStyle="bold" />
+
 </LinearLayout>
