--- a/app/src/main/res/layout/fragment_open_rides.xml
+++ b/app/src/main/res/layout/fragment_open_rides.xml
@@ -34,9 +34,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
+            android:padding="20dp"
             android:text="@string/empty_list_message"
+            android:textAlignment="center"
             android:textColor="#525252"
-            android:textSize="36dp" />
+            android:textSize="36dp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -57,6 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -67,7 +71,8 @@
 
             <Button
                 android:id="@+id/choose_ride"
-                android:layout_width="match_parent"
+                style="@style/ButtonStyle1"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Pickup" />
 
