--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="orange">#FF4630</color>
+    <color name="blue">#304FFE</color>
+    <color name="lightWhite">#B2EBF2</color>
 
     <color name="black_overlay">#66000000</color>
 </resources>
