--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,8 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".LoginActivity"
-    android:background="@drawable/backgroundpic">
+    tools:context=".LoginActivity">
 
     <!-- Login progress -->
     <ProgressBar
@@ -19,7 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:visibility="gone" />
+        android:visibility="gone"
+       />
 
     <ScrollView
         android:id="@+id/login_form"
@@ -34,8 +34,7 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:theme="@style/TextLabel">
+                android:layout_height="wrap_content">
 
                 <AutoCompleteTextView
                     android:id="@+id/email"
@@ -44,14 +43,14 @@
                     android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textColor="@color/blue" />
 
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:theme="@style/TextLabel">
+                android:layout_height="wrap_content">
 
                 <EditText
                     android:id="@+id/password"
@@ -63,7 +62,8 @@
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textColor="@color/blue" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -75,6 +75,7 @@
                 android:layout_marginTop="16dp"
                 android:text="sign in"
                 android:textStyle="bold" />
+
             <Button
                 android:id="@+id/email_register_button"
                 style="@style/ButtonStyle1"
@@ -82,7 +83,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="register"
-
                 android:textStyle="bold" />
 
         </LinearLayout>
