--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,8 @@
 
     <style name="ButtonStyle1" parent="@android:style/Widget.Button">
         <item name="android:background">@drawable/round_button</item>
+        <item name="android:padding">2dp</item>
+        <item name="android:gravity">center</item>
         <item name="android:textColor">@color/lightWhite</item>
         <item name="android:textSize">32sp</item>
         <item name="android:textStyle">bold</item>
