--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- COLOR OF COMMAND BAR -->
     <color name="colorPrimary">#3F51B5</color>
+
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorPrimaryLight">#B2EBF2</color>
 
     <color name="colorsSecondary">#3F51B5</color>
     <color name="colorSecondaryDark">#303F9F</color>
     <color name="colorSecondaryLight">#B2EBF2</color>
-
+<!-- COLOR OF LOGIN EDIT TEXT AND PROGRESS BAR -->
     <color name="colorAccent">#B2EBF2</color>
 
     <color name="orange">#FF4630</color>
     <color name="blue">#304FFE</color>
     <color name="lightWhite">#B2EBF2</color>
     <color name="green">#69F0AE</color>
-    <color name="background">#A5D6A7</color>
+    <color name="background">#FFFFFF</color>
 
     <color name="black_overlay">#66000000</color>
 </resources>
