--- a/app/src/main/res/layout/fragment_driver_stats.xml
+++ b/app/src/main/res/layout/fragment_driver_stats.xml
@@ -20,6 +20,8 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="@android:style/Widget.ProgressBar.Horizontal"
+        android:progressTint="#64DD17"
+        android:progressBackgroundTint="#AA64DD17"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         tools:theme="@style/Base.TextAppearance.AppCompat.Large"
