--- a/app/src/main/res/layout/add_contact_row_layout.xml
+++ b/app/src/main/res/layout/add_contact_row_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:paddingBottom="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
@@ -13,19 +13,20 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
+        <ImageButton
             android:id="@+id/add_button"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:text="Add"
-            />
+            android:src="@drawable/ic_contacts"
+            android:text="Add" />
 
         <TextView
             android:id="@+id/contact_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            />
+            android:textSize="32dp"
+            android:padding="8dp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
