--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -23,7 +23,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_weight="2"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -40,7 +40,6 @@
                 android:layout_gravity="center"
                 android:adjustViewBounds="true"
                 android:autoLink="phone"
-                android:backgroundTint="@color/lightWhite"
                 android:scaleType="centerInside"
                 android:src="@android:drawable/sym_action_call"
                 android:text="Call" />
@@ -75,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:backgroundTint="@color/lightWhite"
+                android:tint="#47A64A"
                 android:scaleType="centerInside"
                 android:src="@android:drawable/sym_action_chat"
                 android:text="SMS" />
