--- a/app/src/main/res/layout/fragment_open_rides.xml
+++ b/app/src/main/res/layout/fragment_open_rides.xml
@@ -21,7 +21,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="370dp"
         android:orientation="vertical">
 
         <ListView
@@ -58,7 +58,9 @@
                 android:id="@+id/name_and_destination"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="8dp"
                 android:layout_gravity="center"
+                android:textColor="@color/blue"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -74,7 +76,7 @@
                 style="@style/ButtonStyle1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pickup" />
+                android:text="PICKUP" />
 
         </LinearLayout>
 
