--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,9 +27,9 @@
         <item name="android:background">@drawable/round_button</item>
         <item name="android:padding">2dp</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/lightWhite</item>
-        <item name="android:textSize">32sp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/background</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="EditText1" parent="Base.Widget.AppCompat.EditText">
